--- a/service/build.xml
+++ b/service/build.xml
@@ -3,18 +3,23 @@
     
     <target name="deploy">
         <parallel>
+            <ant dir="graphql" target="deploy"/>
             <ant dir="job" target="deploy"/>
         </parallel>
     </target>
     
     <target name="clean">
         <parallel>
+            <ant dir="graphql" target="clean"/>
             <ant dir="job" target="clean"/>
         </parallel>
     </target>
         
     <target name="compile">
-        <ant dir="job" target="compile"/>
+        <parallel>
+            <ant dir="graphql" target="compile"/>
+            <ant dir="job" target="compile"/>
+        </parallel>
     </target>
         
 </project>
