E3-2444: Include Google Guava in graphql.war

--- a/service/graphql/build.xml
+++ b/service/graphql/build.xml
@@ -52,9 +52,13 @@
             <classes dir="${service.graphql.javasrc}">
                 <include name="**/*.properties" />
             </classes>
-            <!-- EchoThree -->
+            <!-- Echo Three -->
             <lib dir="${component.home}/build/jars">
                 <include name="echothree-client.jar" />
+            </lib>
+            <!-- Google Guava -->
+            <lib dir="${build.lib.dir}">
+                <include name="guava.jar"/>
             </lib>
         </war>
     </target>
