--- a/ivy.xml
+++ b/ivy.xml
@@ -36,6 +36,7 @@
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="sources->sources" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="sources->sources" />
+        <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="sources->sources" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="sources->sources" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="sources->sources" />
         <dependency org="junit" name="junit" rev="4.12" conf="sources->sources" />
@@ -113,6 +114,7 @@
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="javadoc->javadoc" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="javadoc->javadoc" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="javadoc->javadoc" />
+        <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="javadoc->javadoc" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="javadoc->javadoc" />
         <dependency org="junit" name="junit" rev="4.12" conf="javadoc->javadoc" />
         <dependency org="mysql" name="mysql-connector-java" rev="8.0.12" conf="javadoc->javadoc" />
@@ -189,6 +191,7 @@
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="binaries->default" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="binaries->default" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="binaries->default" />
+        <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="binaries->default" />
         <dependency org="jdom" name="jdom" rev="1.0" conf="binaries->default" />
         <dependency org="junit" name="junit" rev="4.12" conf="binaries->default" />
         <dependency org="mysql" name="mysql-connector-java" rev="8.0.12" conf="binaries->default" />
