E3-2444: Added /graphql and /cms to example Apache configuration

--- a/doc/configuration/apache/wildfly.conf
+++ b/doc/configuration/apache/wildfly.conf
@@ -12,6 +12,28 @@ ProxyPreserveHost On
 ProxyPass /main balancer://main-cluster nofailover=Off
 ProxyPassReverse /main balancer://main-cluster
 
+# Proxy all requests for the URL /graphql to WildFly's AJP listener
+<Proxy balancer://graphql-cluster>
+    Order deny,allow
+    Allow from all
+
+    BalancerMember ajp://127.0.0.1:8009/graphql
+</Proxy>
+
+ProxyPass /graphql balancer://graphql-cluster nofailover=Off
+ProxyPassReverse /graphql balancer://graphql-cluster
+
+# Proxy all requests for the URL /cms to WildFly's AJP listener
+<Proxy balancer://cms-cluster>
+    Order deny,allow
+    Allow from all
+
+    BalancerMember ajp://127.0.0.1:8009/cms
+</Proxy>
+
+ProxyPass /cms balancer://cms-cluster nofailover=Off
+ProxyPassReverse /cms balancer://graphql-cluster
+
 # Force all requests that come in to be redirected to a https URL.
 <VirtualHost *:80>
     ServerName www.example.com
