--- a/ui/web/cms/src/metadata/web.xml
+++ b/ui/web/cms/src/metadata/web.xml
@@ -14,11 +14,11 @@
 <!-- See the License for the specific language governing permissions and              -->
 <!-- limitations under the License.                                                   -->
 <!--                                                                                  -->
-<web-app version="3.1"
-     xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-     xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-<distributable />
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+    <distributable />
     <resource-env-ref>
         <resource-env-ref-name>java:app/infinispan/EchoThree/Cms</resource-env-ref-name>
         <resource-env-ref-type>org.infinispan.Cache</resource-env-ref-type>
