E3-2451: Removed useSS from database utility connection parameters

--- a/ui/cli/database/src/metadata/echothree-database.properties
+++ b/ui/cli/database/src/metadata/echothree-database.properties
@@ -5,6 +5,6 @@ com.echothree.ui.cli.database.db.default.password=echothree
 com.echothree.ui.cli.database.db.default.characterSet=utf8mb4
 com.echothree.ui.cli.database.db.default.collation=utf8mb4_unicode_520_ci
 
-com.echothree.ui.cli.database.db.echothree.url=jdbc:mysql://127.0.0.1:3306/echothree?useSSL=false&serverTimezone=US/Central
+com.echothree.ui.cli.database.db.echothree.url=jdbc:mysql://127.0.0.1:3306/echothree?serverTimezone=US/Central
 
-com.echothree.ui.cli.database.db.reporting.url=jdbc:mysql://127.0.0.1:3306/reporting?useSSL=false&serverTimezone=US/Central
+com.echothree.ui.cli.database.db.reporting.url=jdbc:mysql://127.0.0.1:3306/reporting?serverTimezone=US/Central
