--- a/ui/cli/amazon/build.xml
+++ b/ui/cli/amazon/build.xml
@@ -19,15 +19,22 @@
     <property file="build.properties"/>
     <property file="${component.home}/environment.properties"/>
     <property name="metadata.dir" value="src/metadata"/>
-    
-    <target name="compile">
+
+    <target name="init">
+        <property name="home.dir" value="../../.." />
+        <property name="lib.dir" value="${home.dir}/lib" />
+        <property name="build.lib.dir" value="${home.dir}/build/lib" />
+    </target>
+
+    <target name="compile" depends="init">
         <mkdir dir="build"/>
         <mkdir dir="build/classes"/>
+        <path id="processorpath.ref">
+          <pathelement location="${build.lib.dir}/error_prone_core-with-dependencies.jar"/>
+          <pathelement location="${build.lib.dir}/jFormatString.jar"/>
+        </path>
         <javac
-            compiler="com.google.errorprone.ErrorProneAntCompilerAdapter"
             debug="true"
-            source="1.8"
-            target="1.8"
             srcdir="./src/java"
             destdir="./build/classes"
             includeAntRuntime="true">
@@ -43,12 +50,13 @@
                     <include name="echothree-client.jar"/>
                 </fileset>
             </classpath>
+            <compilerarg line="-XDcompilePolicy=simple"/>
+            <compilerarg value="-processorpath"/>
+            <compilerarg pathref="processorpath.ref"/>
+            <compilerarg value="-Xplugin:ErrorProne -Xep:DeadException:ERROR" />
             <compilerarg value="-Xlint:-options" />
             <!-- <compilerarg value="-Xlint:deprecation" /> -->
             <!-- <compilerarg value="-Xlint:unchecked" /> -->
-            <compilerclasspath>
-                <pathelement location="../../../build/lib/error_prone_ant.jar"/>
-            </compilerclasspath>
         </javac>
     </target>
     
