--- a/ivy.xml
+++ b/ivy.xml
@@ -8,7 +8,7 @@
     </configurations>
     <dependencies>
         <dependency org="com.google.code.gson" name="gson" rev="2.8.5" conf="sources->sources" />
-        <dependency org="com.google.errorprone" name="error_prone_ant" rev="2.3.1" conf="sources->sources" />
+        <dependency org="com.google.errorprone" name="error_prone_core" rev="2.3.2" conf="sources->sources" />
         <dependency org="com.google.guava" name="guava" rev="26.0-jre" conf="sources->sources" />
         <dependency org="com.graphql-java" name="graphql-java" rev="9.4" conf="sources->sources" />
         <dependency org="com.ibm.icu" name="icu4j" rev="62.1" conf="sources->sources" />
@@ -34,6 +34,7 @@
         <dependency org="io.github.classgraph" name="classgraph" rev="4.6.10" conf="sources->sources" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="6.0" conf="sources->sources" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
+        <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="sources->sources" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="sources->sources" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="sources->sources" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="sources->sources" />
@@ -85,7 +86,7 @@
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="sources->sources" />
 
         <dependency org="com.google.code.gson" name="gson" rev="2.8.5" conf="javadoc->javadoc" />
-        <dependency org="com.google.errorprone" name="error_prone_ant" rev="2.3.1" conf="javadoc->javadoc" />
+        <dependency org="com.google.errorprone" name="error_prone_core" rev="2.3.2" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="guava" rev="26.0-jre" conf="javadoc->javadoc" />
         <dependency org="com.graphql-java" name="graphql-java" rev="9.4" conf="javadoc->javadoc" />
         <dependency org="com.ibm.icu" name="icu4j" rev="62.1" conf="javadoc->javadoc" />
@@ -111,6 +112,7 @@
         <dependency org="io.github.classgraph" name="classgraph" rev="4.6.10" conf="javadoc->javadoc" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="6.0" conf="javadoc->javadoc" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="javadoc->javadoc" />
+        <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="javadoc->javadoc" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="javadoc->javadoc" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="javadoc->javadoc" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="javadoc->javadoc" />
@@ -162,7 +164,9 @@
         <dependency org="xml-apis" name="xml-apis" rev="1.4.01" conf="javadoc->javadoc" />
 
         <dependency org="com.google.code.gson" name="gson" rev="2.8.5" conf="binaries->default" />
-        <dependency org="com.google.errorprone" name="error_prone_ant" rev="2.3.1" conf="binaries->default" />
+        <dependency org="com.google.errorprone" name="error_prone_core" rev="2.3.2" conf="binaries->default">
+            <artifact name="error_prone_core" e:classifier="with-dependencies" ext="jar"/>
+        </dependency>
         <dependency org="com.google.guava" name="guava" rev="26.0-jre" conf="binaries->default" />
         <dependency org="com.graphql-java" name="graphql-java" rev="9.4" conf="binaries->default" />
         <dependency org="com.ibm.icu" name="icu4j" rev="62.1" conf="binaries->default" />
@@ -188,6 +192,7 @@
         <dependency org="io.github.classgraph" name="classgraph" rev="4.6.10" conf="binaries->default" />
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="6.0" conf="binaries->default" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="binaries->default" />
+        <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="binaries->default" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="binaries->default" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="binaries->default" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="binaries->default" />
