E3-2469: Directories for publishing web content moved to environment.properties

--- a/build.xml
+++ b/build.xml
@@ -130,7 +130,7 @@
             <arg value="ssh"/>
             <arg value="--delete"/>
             <arg value="generated/javadoc/"/>
-            <arg value="${web.host}:/var/www/html/javadoc/master"/>
+            <arg value="${web.host}:${web.dir.base}/${web.dir.javadoc}"/>
         </exec>
     </target>
     
