--- a/environment.properties
+++ b/environment.properties
@@ -1,4 +1,6 @@
 web.host=web.echothree.com
+web.host.base.dir=/var/www/html
+web.host.javadoc.dir=javadoc/master
 
 wildfly.version=15.0.0.Final
 wildfly.modules=modules
