E3-2469: Additional properties for web content directories added

--- a/environment.properties
+++ b/environment.properties
@@ -1,6 +1,6 @@
 web.host=web.echothree.com
-web.host.base.dir=/var/www/html
-web.host.javadoc.dir=javadoc/master
+web.dir.base=/var/www/html
+web.dir.javadoc=javadoc/master
 
 wildfly.version=15.0.0.Final
 wildfly.modules=modules
