--- a/ivy.xml
+++ b/ivy.xml
@@ -35,6 +35,7 @@
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="6.0" conf="sources->sources" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="sources->sources" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="sources->sources" />
+        <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="sources->sources" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="sources->sources" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="sources->sources" />
         <dependency org="javax.websocket" name="javax.websocket-api" rev="1.1" conf="sources->sources" />
@@ -113,6 +114,7 @@
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="6.0" conf="javadoc->javadoc" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="javadoc->javadoc" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="javadoc->javadoc" />
+        <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="javadoc->javadoc" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="javadoc->javadoc" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="javadoc->javadoc" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="javadoc->javadoc" />
@@ -193,6 +195,7 @@
         <dependency org="io.github.graphql-java" name="graphql-java-annotations" rev="6.0" conf="binaries->default" />
         <dependency org="javax.activation" name="activation" rev="1.1.1" conf="binaries->default" />
         <dependency org="javax.annotation" name="javax.annotation-api" rev="1.3.2" conf="binaries->default" />
+        <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2" conf="binaries->default" />
         <dependency org="javax.enterprise" name="cdi-api" rev="2.0.SP1" conf="binaries->default" />
         <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="binaries->default" />
         <dependency org="javax.validation" name="validation-api" rev="2.0.1.Final" conf="binaries->default" />
