E3-2485: Upgraded Error Prone to 2.3.3

--- a/service/job/build.xml
+++ b/service/job/build.xml
@@ -37,8 +37,9 @@
  
     <target name="compile" depends="prepare">
         <path id="processorpath.ref">
-          <pathelement location="${build.dir.lib}/error_prone_core-with-dependencies.jar"/>
-          <pathelement location="${build.dir.lib}/jFormatString.jar"/>
+            <pathelement location="${build.dir.lib}/error_prone_core-with-dependencies.jar"/>
+            <pathelement location="${build.dir.lib}/failureaccess.jar"/>
+            <pathelement location="${build.dir.lib}/jFormatString.jar"/>
         </path>
         <javac
             debug="on"
