--- a/ui/cli/mailtransfer/build.xml
+++ b/ui/cli/mailtransfer/build.xml
@@ -30,8 +30,9 @@
         <mkdir dir="build"/>
         <mkdir dir="build/classes"/>
         <path id="processorpath.ref">
-          <pathelement location="${build.lib.dir}/error_prone_core-with-dependencies.jar"/>
-          <pathelement location="${build.lib.dir}/jFormatString.jar"/>
+            <pathelement location="${build.lib.dir}/error_prone_core-with-dependencies.jar"/>
+            <pathelement location="${build.lib.dir}/failureaccess.jar"/>
+            <pathelement location="${build.lib.dir}/jFormatString.jar"/>
         </path>
         <javac
             debug="on"
