E3-2484: Added dependency on com.google.guava:failureaccess:1.0, include failureaccess.jar in deployed artifacts

--- a/service/graphql/build.xml
+++ b/service/graphql/build.xml
@@ -79,6 +79,7 @@
             <!-- Google Guava -->
             <lib dir="${build.lib.dir}">
                 <include name="guava.jar"/>
+                <include name="failureaccess.jar" />
             </lib>
         </war>
     </target>
