--- a/ui/web/cms/build.xml
+++ b/ui/web/cms/build.xml
@@ -93,6 +93,7 @@
                 <include name="textile4j.jar"/>
                 <include name="nekohtml.jar"/>
                 <include name="guava.jar"/>
+                <include name="failureaccess.jar" />
             </lib>
             <!-- Apache Commons Lang -->
             <lib dir="${build.lib.dir}">
