--- a/ivy.xml
+++ b/ivy.xml
@@ -9,6 +9,7 @@
     <dependencies>
         <dependency org="com.google.code.gson" name="gson" rev="2.8.5" conf="sources->sources" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.3.3" conf="sources->sources" />
+        <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="sources->sources" />
         <dependency org="com.google.guava" name="guava" rev="27.1-jre" conf="sources->sources" />
         <dependency org="com.graphql-java" name="graphql-java" rev="9.4" conf="sources->sources" />
         <dependency org="com.ibm.icu" name="icu4j" rev="62.1" conf="sources->sources" />
@@ -88,6 +89,7 @@
 
         <dependency org="com.google.code.gson" name="gson" rev="2.8.5" conf="javadoc->javadoc" />
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.3.3" conf="javadoc->javadoc" />
+        <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="javadoc->javadoc" />
         <dependency org="com.google.guava" name="guava" rev="27.1-jre" conf="javadoc->javadoc" />
         <dependency org="com.graphql-java" name="graphql-java" rev="9.4" conf="javadoc->javadoc" />
         <dependency org="com.ibm.icu" name="icu4j" rev="62.1" conf="javadoc->javadoc" />
@@ -169,6 +171,7 @@
         <dependency org="com.google.errorprone" name="error_prone_core" rev="2.3.3" conf="binaries->default">
             <artifact name="error_prone_core" e:classifier="with-dependencies" ext="jar"/>
         </dependency>
+        <dependency org="com.google.guava" name="failureaccess" rev="1.0" conf="binaries->default" />
         <dependency org="com.google.guava" name="guava" rev="27.1-jre" conf="binaries->default" />
         <dependency org="com.graphql-java" name="graphql-java" rev="9.4" conf="binaries->default" />
         <dependency org="com.ibm.icu" name="icu4j" rev="62.1" conf="binaries->default" />
