E3-2443: Upgraded graphql-java to 12.0 and graphql-java-annotations to 7.0

--- a/src/build.xml
+++ b/src/build.xml
@@ -274,6 +274,7 @@
                 <include name="httpclient.jar" />
                 <include name="httpcore.jar" />
                 <include name="itext.jar" />
+                <include name="java-dataloader.jar"/>
                 <include name="jooq.jar"/>
                 <include name="juel-impl.jar"/>
                 <include name="lucene-analyzers-common.jar" />
