E3-2505: Added Google Analytics to 'bottom' of Javadoc

--- a/build.properties
+++ b/build.properties
@@ -27,7 +27,8 @@ javadoc.version=false
 javadoc.use=true
 javadoc.windowtitle=Echo Three APIs
 javadoc.doctitle=Echo Three Component
-javadoc.bottom=Copyright 2002-2019 Echo Three, LLC
+javadoc.copyright=Copyright 2002-2019 Echo Three, LLC
+javadoc.trackingId=UA-144274299-1
 
 #####################
 # Pattern Sets      #
