--- a/environment.properties
+++ b/environment.properties
@@ -2,11 +2,19 @@ web.host=web.echothree.com
 web.dir.base=/var/www/html
 web.dir.javadoc=javadoc/master
 
+jacoco.home=../../jacoco-latest
+jacoco.output.dir=generated/jacoco
+
+wildfly.output.dir=generated/wildfly
+wildfly.output.reload=${wildfly.output.dir}/reload.txt
+wildfly.output.shutdown=${wildfly.output.dir}/shutdown.txt
+
 wildfly.version=17.0.0.Final
 wildfly.modules=modules
 wildfly.instance=standalone
 wildfly.configuration=standalone-full-ha.xml
 wildfly.deployments=deployments
+
 wildfly.home=../../wildfly-${wildfly.version}
 wildfly.home.bin=${wildfly.home}/bin
 wildfly.home.modules=${wildfly.home}/${wildfly.modules}
@@ -16,13 +24,12 @@ wildfly.host=127.0.0.1
 wildfly.console.port=9990
 wildfly.console.url=/console/index.html
 
+wildfly.jacoco.home=../../${jacoco.home}
+wildfly.jacoco.output.dir=../../${jacoco.output.dir}
+
 wildfly.javaopts.memory=-Xms128m -Xmx6144m
 wildfly.javaopts.network=-Djava.net.preferIPv4Stack=true
 wildfly.javaopts.debug=-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n
 wildfly.javaopts.jooq=-Dorg.jooq.no-logo=true
-wildfly.javaopts.coverage=-javaagent:/Users/rich/Java/jacoco-latest/lib/jacocoagent.jar=destfile=/Users/rich/jacoco.exec,output=file,append=true,dumponexit=true
+wildfly.javaopts.coverage=-javaagent:${wildfly.jacoco.home}/lib/jacocoagent.jar=destfile=${wildfly.jacoco.output.dir}/jacoco.exec,output=file,append=true,dumponexit=true
 wildfly.javaopts.required=-Djboss.modules.system.pkgs=org.jboss.byteman -Djava.awt.headless=true
-
-wildfly.output.dir=generated/wildfly
-wildfly.output.reload=${wildfly.output.dir}/reload.txt
-wildfly.output.shutdown=${wildfly.output.dir}/shutdown.txt
