--- a/ui/cli/dataloader/build.xml
+++ b/ui/cli/dataloader/build.xml
@@ -81,7 +81,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}" />
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
@@ -104,7 +104,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}" />
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
@@ -127,7 +127,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}" />
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
@@ -156,7 +156,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}" />
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
@@ -179,7 +179,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}" />
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
