--- a/ui/web/main/build.xml
+++ b/ui/web/main/build.xml
@@ -197,7 +197,7 @@
     </target>
 
     <target name="deploy" depends="war">
-        <copy file="${ui.web.main.warfile}" todir="../../${wildfly.home.deploy}" />
+        <copy file="${ui.web.main.warfile}" todir="../../../${wildfly.home.deploy}" />
     </target>
 
     <target name="clean">
