--- a/ui/cli/mailtransfer/build.xml
+++ b/ui/cli/mailtransfer/build.xml
@@ -68,7 +68,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}"/>
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
@@ -91,7 +91,7 @@
             <classpath>
                 <pathelement path="${metadata.dir}"/>
                 <pathelement location="./build/classes"/>
-                <fileset dir="../../${wildfly.home.modules}">
+                <fileset dir="../../../${wildfly.home.modules}">
                     <include name="**/*.jar"/>
                 </fileset>
                 <fileset dir="../../../lib">
