E3-2506: Added additional WildFly targets for debugging and JoCoCo support, added target for generating JoCoCO coverage report

--- a/environment.properties
+++ b/environment.properties
@@ -2,8 +2,9 @@ web.host=web.echothree.com
 web.dir.base=/var/www/html
 web.dir.javadoc=javadoc/master
 
-jacoco.home=../../jacoco-latest
 jacoco.output.dir=generated/jacoco
+jacoco.output.report.dir=generated/jacoco/report
+jacoco.output.destfile=jacoco.exec
 
 wildfly.output.dir=generated/wildfly
 wildfly.output.reload=${wildfly.output.dir}/reload.txt
@@ -20,16 +21,18 @@ wildfly.home.bin=${wildfly.home}/bin
 wildfly.home.modules=${wildfly.home}/${wildfly.modules}
 wildfly.home.deploy=${wildfly.home}/${wildfly.instance}/${wildfly.deployments}
 
+# Host/port/URL to verify WildFly has successfully started
 wildfly.host=127.0.0.1
 wildfly.console.port=9990
 wildfly.console.url=/console/index.html
 
+# Relative to wildfly.output.dir
 wildfly.jacoco.home=../../${jacoco.home}
 wildfly.jacoco.output.dir=../../${jacoco.output.dir}
 
 wildfly.javaopts.memory=-Xms128m -Xmx6144m
 wildfly.javaopts.network=-Djava.net.preferIPv4Stack=true
-wildfly.javaopts.debug=-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n
 wildfly.javaopts.jooq=-Dorg.jooq.no-logo=true
-wildfly.javaopts.coverage=-javaagent:${wildfly.jacoco.home}/lib/jacocoagent.jar=destfile=${wildfly.jacoco.output.dir}/jacoco.exec,output=file,append=true,dumponexit=true
 wildfly.javaopts.required=-Djboss.modules.system.pkgs=org.jboss.byteman -Djava.awt.headless=true
+wildfly.javaopts.debug=-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n
+wildfly.javaopts.jacoco=-javaagent:../../build/lib/org.jacoco.agent-runtime.jar=destfile=${wildfly.jacoco.output.dir}/${jacoco.output.destfile},output=file,append=true,dumponexit=true
