--- a/ivy.xml
+++ b/ivy.xml
@@ -67,6 +67,9 @@
         <dependency org="org.freemarker" name="freemarker" rev="2.3.23" conf="sources->sources" />
         <dependency org="org.infinispan" name="infinispan-commons" rev="9.4.14.Final" conf="sources->sources" />
         <dependency org="org.infinispan" name="infinispan-core" rev="9.4.14.Final" conf="sources->sources" />
+        <dependency org="org.jacoco" name="org.jacoco.agent" rev="0.8.4" conf="sources->sources" />
+        <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.8.4" conf="sources->sources" />
+        <dependency org="org.jacoco" name="org.jacoco.report" rev="0.8.4" conf="sources->sources" />
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="sources->sources" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="sources->sources" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="sources->sources" />
@@ -147,6 +150,9 @@
         <dependency org="org.freemarker" name="freemarker" rev="2.3.23" conf="javadoc->javadoc" />
         <dependency org="org.infinispan" name="infinispan-commons" rev="9.4.14.Final" conf="javadoc->javadoc" />
         <dependency org="org.infinispan" name="infinispan-core" rev="9.4.14.Final" conf="javadoc->javadoc" />
+        <dependency org="org.jacoco" name="org.jacoco.agent" rev="0.8.4" conf="javadoc->javadoc" />
+        <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.8.4" conf="javadoc->javadoc" />
+        <dependency org="org.jacoco" name="org.jacoco.report" rev="0.8.4" conf="javadoc->javadoc" />
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="javadoc->javadoc" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="javadoc->javadoc" />
@@ -231,6 +237,13 @@
         <dependency org="org.freemarker" name="freemarker" rev="2.3.23" conf="binaries->default" />
         <dependency org="org.infinispan" name="infinispan-commons" rev="9.4.14.Final" conf="binaries->default" />
         <dependency org="org.infinispan" name="infinispan-core" rev="9.4.14.Final" conf="binaries->default" />
+        <dependency org="org.jacoco" name="org.jacoco.agent" rev="0.8.4" conf="binaries->default">
+            <artifact name="org.jacoco.agent" e:classifier="runtime" ext="jar"/>
+        </dependency>
+        <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.8.4" conf="binaries->default">
+            <artifact name="org.jacoco.ant" e:classifier="nodeps" ext="jar"/>
+        </dependency>
+        <dependency org="org.jacoco" name="org.jacoco.report" rev="0.8.4" conf="binaries->default"/>
         <dependency org="org.javassist" name="javassist" rev="3.22.0-GA" conf="binaries->default" />
         <dependency org="org.jfree" name="jcommon" rev="1.0.24" conf="binaries->default" />
         <dependency org="org.jfree" name="jfreechart" rev="1.5.0" conf="binaries->default" />
